# nemspy

./: .editorconfig  .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  documentation.yml  publish.yml  test.yml  tests.yml  tests_simple.yml
NEMSpy/: __init__.py  _version.py  earth.py  nems.py
NEMSpy/model/: __init__.py  atmospheric.py  hydrologic.py  model.py  ocean.py  wave.py
doc/source/: api.rst  conf.py  modelingsystem.rst
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst  nemspy.configuration.rst  nemspy.interface.rst  nemspy.model.rst  nemspy.rst  nemspy.utilities.rst
examples/: example_1.py  example_2.py
nemspy/: __init__.py  _version.py  configuration.py  interface.py  logger.py  nems.py  utilities.py  verbosity.py
nemspy/model/: __init__.py  atmosphere.py  atmospheric.py  base.py  earth.py  hydrologic.py  hydrological.py  hydrology.py  ice.py  ocean.py  wave.py  waves.py
requirements/: development.txt  production.txt
tests/: __init__.py  test_interface.py  test_model.py  test_models.py  test_nems.py
tests/data/reference/test_configuration_files/: atm_namelist.rc  config.rc  model_configure  nems.configure
tests/reference/: atm_namelist.rc  config.rc  model_configure  nems.configure
