[tool.poetry]
name = 'nemspy'
version = '0.0.0'
description = 'configuration generation for the NOAA Environmental Modeling System (NEMS), a coupled modeling framework written in FORTRAN and based on the National Unified Operational Prediction Capability (NUOPC)'
authors = ['Zach Burnett <zachary.burnett@noaa.gov>']
license = 'CC0-1.0'
readme = 'README.md'
repository = 'https://github.com/noaa-ocs-modeling/NEMSpy.git'
documentation = 'https://nemspy.readthedocs.io'

[build-system]
requires = [
    'poetry-core>=1.0.0',
    'poetry-dynamic-versioning',
]
build-backend = 'poetry.core.masonry.api'

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dependencies]
python = '^3.6'
typepigeon = '*'
isort = { version = '*', optional = true }
oitnb = { version = '*', optional = true }
pytest = { version = '*', optional = true }
pytest-cov = { version = '*', optional = true }
pytest-xdist = { version = '*', optional = true }
m2r2 = { version = '*', optional = true }
sphinx = { version = '*', optional = true }
sphinx-rtd-theme = { version = '*', optional = true }
