[metadata]
name = nemspy
author = Zach Burnett, Jaime R Calzada
author_email = zachary.burnett@noaa.gov, jreniel@gmail.com
description = NEMS configuration generation
long_description = file: README.md
license = MIT
url = https://github.com/noaa-ocs-modeling/nemspy.git

[nosetests]
exe = True
tests = tests/
