[metadata]
name = nemspy
author = Zach Burnett, Jaime R Calzada
author_email = zachary.burnett@noaa.gov, jreniel@gmail.com
description = NEMS configuration generation
long_description = file: README.md
license = CC0
url = https://github.com/noaa-ocs-modeling/nemspy.git

[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
python_files = tests/**.py
