[metadata]
name = nemspy
author = Zach Burnett <zachary.r.burnett@gmail.com>, Jaime R Calzada <jreniel@gmail.com>
description = NEMS configuration generation
long_description = file: README.md
long_description_content_type = 'text/markdown'
license = CC0
python = >=3.6
url = https://github.com/noaa-ocs-modeling/nemspy.git

[options.extras_require]
testing =
    pytest
    pytest-cov
    pytest-xdist
development =
    flake8
    isort
    oitnb
documentation =
    m2r2
    sphinx
    sphinx-rtd-theme
